// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render component 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="roleAssignment"
      >
        <td>
          Role Name 5
        </td>
        <td>
          Sulu
        </td>
        <td
          class="locale"
        >
          <div
            data-testid="multi-select"
          >
            <div
              data-testid="multi-select-option"
            >
              en
            </div>
            <div
              data-testid="multi-select-option"
            >
              de
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render component in disabled state 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="roleAssignment disabled"
      >
        <td>
          Role Name 5
        </td>
        <td>
          Sulu
        </td>
        <td
          class="locale"
        >
          <div
            data-testid="multi-select"
          >
            <div
              data-testid="multi-select-option"
            >
              en
            </div>
            <div
              data-testid="multi-select-option"
            >
              de
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
